# stock-price-analyst-agent

./: README.md
crew/: pyproject.toml
crew/artifacts/: AAPL_analysis.json  AAPL_analysis_report.md  AAPL_stock_data.csv  report.md
crew/src/crew/: crew.py  main.py
crew/src/crew/config/: agents.yaml  tasks.yaml
crew/src/crew/tools/: custom_tools.py  helper.py  schemas.py
